kubernetes/ingress.yaml
###########################
# @author Elias De Hondt  #
# @since 18/11/2024       #
###########################
# Description: This ingress is used to expose the necessary services.
# Usage:
#         kubectl apply -f https://github.com/jetstack/cert-manager/releases/download/v1.11.0/cert-manager.yaml
#         kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
#         kubectl apply -f ingress.yaml
#         kubectl get ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - status.kdg-ip2.eliasdh.com
    secretName: grafana-tls
  # - hosts:
  #   - stack.kdg-ip2.eliasdh.com
  #   secretName: elk-stack-tls
  # - hosts:
  #   - keycloak.kdg-ip2.eliasdh.com
  #   secretName: keycloak-iam-tls
  # - hosts:
  #   - www.kdg-ip2.eliasdh.com
  #   secretName: react-frontend-tls
  rules:
  - host: status.kdg-ip2.eliasdh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
#   - host: stack.kdg-IP2.eliasdh.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: elk-stack
#             port:
#               number: 443
#   - host: keycloak.kdg-IP2.eliasdh.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: keycloak-iam
#             port:
#               number: 80
#   - host: www.kdg-IP2.eliasdh.com
#     http:
#       paths:s
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: react-frontend
#             port:
#               number: 80
# ---
